# Frybot

./: .gitignore  CMakeLists.txt  README.md  package.xml
Description/: platform.stl
Docs/: Computer_config.txt  Computer_setup.md
PositioningApp/: PositionWebApp  keyboardControl  newApp  positionWebApp
PositioningApp/static/css/: main.css  styles.css
PositioningApp/templates/: index.html  newSlider.html  sliderJointControl.html
include/: teleop_keyboard.h
launch/: Keyboard.launch  dev.launch  displayJointPosition.launch  gripperstartup.launch  gui.launch  positionWebApp.launch  positionWebAppOld.launch  startup.launch  teleop.launch
scripts/: POC1  bagcutter  bagcutterControl  displayJointPosition.sh  getJointStatesService  gripperTest  keyboardControl  manipulatorTest  moveGripper  moveManipulator  poc1  poc2  setmode
src/: teleop_keyboard.cpp
srv/: GetJointPose.srv  SetJointPose.srv  SetJointPoseTest.srv
